--- a/1- Angular application/MyNavigationApp/src/components/input/input.component.html
+++ b/1- Angular application/MyNavigationApp/src/components/input/input.component.html
@@ -1,1 +1,6 @@
-<p>input works!</p>
+{{ label }}
+<input
+  [placeholder]="placeholder"
+  [type]="type"
+  [value]="value"
+  (input)="onValueChange($event)" />
