--- a/1- Angular application/MyComponentApp/src/components/button/button.component.html
+++ b/1- Angular application/MyComponentApp/src/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button class="btn btn-dark" (click)="onClick()">
+<button [ngClass]="['btn', colorClass()]" (click)="onClick()">
   {{ title }}
 </button>
