--- a/1- Angular application/MyComponentApp/src/components/input/input.component.html
+++ b/1- Angular application/MyComponentApp/src/components/input/input.component.html
@@ -1,6 +1,7 @@
 {{ label }}
 <input
-  [placeholder]="placeholder"
   [type]="type"
+  class="form-control"
+  [placeholder]="placeholder"
   [value]="value"
   (input)="onValueChange($event)" />
