--- a/1- Angular application/MyAngularMaterialApp/src/components/button/button.component.html
+++ b/1- Angular application/MyAngularMaterialApp/src/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button [ngClass]="['btn', colorClass()]" (click)="onClick()">
+<button mat-raised-button [color]="color" (click)="onClick()">
   {{ title }}
 </button>
