--- a/1- Angular application/MyAngularMaterialApp/src/components/input/input.component.html
+++ b/1- Angular application/MyAngularMaterialApp/src/components/input/input.component.html
@@ -1,10 +1,10 @@
-<div class="mb-3">
-  <label *ngIf="label" class="form-label">{{ label }}</label>
+<mat-form-field>
+  <mat-label *ngIf="label">{{ label }}</mat-label>
 
   <input
+    matInput
     [type]="type"
-    class="form-control"
     [placeholder]="placeholder"
     [value]="value"
     (input)="onValueChange($event)" />
-</div>
+</mat-form-field>
