--- a/1- Angular application/MyComponentApp/src/app/app.component.html
+++ b/1- Angular application/MyComponentApp/src/app/app.component.html
@@ -16,4 +16,11 @@
   placeholder="Seleccione un item" />
 {{ optionSelected }}
 
+<br />
+<br />
+<br />
+<br />
+
+<app-login-form />
+
 <router-outlet />
