--- a/1- Angular application/MyFinalApp/src/app/authentication/login-form/login-form.component.html
+++ b/1- Angular application/MyFinalApp/src/app/authentication/login-form/login-form.component.html
@@ -1,9 +1,13 @@
-<h1>Bienvenido a MyFinalApp</h1>
+<div class="container">
+  <div class="row justify-content-center mb-3">
+    <div class="col-auto">
+      <h1>Bienvenido a MyFinalApp</h1>
+    </div>
+  </div>
 
-<app-form [form]="loginForm" (onSubmit)="onSubmit($event)">
-  <div class="container">
+  <app-form [form]="loginForm" (onSubmit)="onSubmit($event)">
     <div class="row justify-content-center mb-3">
-      <div class="col-auto">
+      <div class="col-4">
         <app-form-input
           type="text"
           label="Email"
@@ -15,7 +19,7 @@
     </div>
 
     <div class="row justify-content-center mb-4">
-      <div class="col-auto">
+      <div class="col-4">
         <app-form-input
           type="password"
           label="Password"
@@ -36,5 +40,5 @@
         </ng-template>
       </div>
     </div>
-  </div>
-</app-form>
+  </app-form>
+</div>
