--- a/1- Angular application/MyFinalApp/src/components/input/input.component.html
+++ b/1- Angular application/MyFinalApp/src/components/input/input.component.html
@@ -1,8 +1,7 @@
-<div class="mb-3">
-  <label *ngIf="label" class="form-label">{{ label }}</label>
-  <input
-    [placeholder]="placeholder"
-    [type]="type"
-    [value]="value"
-    (input)="onValueChange($event)" />
-</div>
+<label *ngIf="label" class="form-label">{{ label }}</label>
+<input
+  class="form-control"
+  [placeholder]="placeholder"
+  [type]="type"
+  [value]="value"
+  (input)="onValueChange($event)" />
